added logic for pin in listing
