# src/docs/swagger.json
@@ -2156,6 +2156,9 @@
                 "name": {
                     "type": "string"
                 },
+                "requires_pin": {
+                    "type": "boolean"
+                },
                 "slug": {
                     "type": "string"
                 },
@@ -2361,6 +2364,9 @@
                 "discount_pct": {
                     "type": "number"
                 },
+                "expiry_date": {
+                    "type": "string"
+                },
                 "face_value": {
                     "type": "number"
                 },
@@ -2377,6 +2383,9 @@
                     "type": "string"
                 },
                 "lock_expires_at": {
+                    "type": "string"
+                },
+                "pin_encrypted": {
                     "type": "string"
                 },
                 "seller_id": {
@@ -2706,6 +2715,7 @@
             "required": [
                 "brand_id",
                 "card_code",
+                "expiry_date",
                 "face_value"
             ],
             "properties": {
@@ -2722,9 +2732,17 @@
                     "minLength": 4,
                     "example": "AMZN-XXXX-XXXX-XXXX"
                 },
+                "card_pin": {
+                    "type": "string",
+                    "example": "1234"
+                },
                 "custom_discount": {
                     "type": "number",
                     "example": 5
+                },
+                "expiry_date": {
+                    "type": "string",
+                    "example": "12/26"
                 },
                 "face_value": {
                     "type": "number",
